<resources>
    <string name="app_name">Light`s Out</string>
    <string name="play">Play</string>
    <string name="ranking">Ranking</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>
    <string name="submit">Submit \n your time</string>
    <string name="restart">Restart</string>
    <string name="paused">Game is paused</string>
    <string name="resume">Resume</string>
    <string name="hint">Enter your name</string>
    <string name="refresh">Click to refresh</string>
    <string name="enter_name">Enter your name:</string>
    <string name="enter_name_hint">This will be the displayed name on the ranking system.</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="about_app">About this app</string>
    <string name="about_creators">About the creators</string>
    <string name="about_the_app_text">Lights Out is an electronic game released by
                        Tiger Electronics in 1995. The game consists of a 5 by 5
                        grid of lights. When the game starts, a random number or a stored
                        pattern of these lights is switched on. Pressing any of the lights will toggle it
                        and the adjacent lights. The goal of the puzzle is to switch all the lights off,
                        preferably in as few button presses as possible.</string>
    <string name="about_the_creators_text">This app has been developed by Matache David Mihai and Tigaiala Maxim
                 for the Android Course inside of the faculty of Mathematics
                 and Informatics inside of the Transilvania Brasov University</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>