<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Menu"
    android:background="@drawable/app_background">
    
    <TextView
        android:id="@+id/menuPlayerName"

        android:layout_width="wrap_content"
        android:layout_height="40sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:padding="10dp"

        android:text="@string/logged_in_as"
        android:singleLine="true"
        android:textSize="14sp"
        android:textColor="@color/lightGray"
        android:fontFamily="@font/robotoitalic"
        />
    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="55sp"
        android:textColor="@color/white"
        android:fontFamily="@font/robotobolditalic"
        android:text="@string/app_name"
        android:textAlignment="gravity"

        android:padding="10sp"

        app:layout_constraintTop_toBottomOf="@id/menuPlayerName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.widget.Button
        android:id="@+id/menuPlay"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:background="@drawable/button_new_design"

        android:textColor="@color/yellow"
        android:fontFamily="@font/robotoitalic"
        android:textSize="20sp"
        android:text="@string/play"

        app:layout_constraintTop_toBottomOf="@id/menuTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="170sp"
        />
    <android.widget.Button
        android:id="@+id/menuRanking"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:background="@drawable/button_new_design"

        android:textColor="@color/yellow"
        android:fontFamily="@font/robotoitalic"
        android:textSize="20sp"
        android:text="@string/ranking"

        app:layout_constraintTop_toBottomOf="@id/menuPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30sp"
        />
    <android.widget.Button
        android:id="@+id/menuAbout"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:background="@drawable/button_new_design"

        android:textColor="@color/yellow"
        android:fontFamily="@font/robotoitalic"
        android:textSize="20sp"
        android:text="@string/about"

        app:layout_constraintTop_toBottomOf="@id/menuRanking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30sp"
        />

    <android.widget.Button
        android:id="@+id/menuExit"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:background="@drawable/button_exit_design"

        android:textColor="@color/lightGray"
        android:fontFamily="@font/robotoitalic"
        android:textSize="20sp"
        android:text="@string/exit"

        app:layout_constraintTop_toBottomOf="@id/menuAbout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>