<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.About"
    android:background="@drawable/app_background">
    <TextView
        android:id="@+id/aboutPlayerName"

        android:layout_width="wrap_content"
        android:layout_height="40sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:padding="10dp"

        android:text="@string/logged_in_as"
        android:singleLine="true"
        android:textSize="14sp"
        android:textColor="@color/lightGray"
        android:fontFamily="@font/robotoitalic"
        />
    <TextView
        android:id="@+id/aboutMenuTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:fontFamily="@font/robotobolditalic"

        app:layout_constraintTop_toBottomOf="@id/aboutPlayerName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboutMenuTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/lightGray">
        <TextView
            android:background="@color/lightGray"
            android:id="@+id/aboutThisApp"
            android:layout_width="wrap_content"
            android:layout_height="50sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            android:padding="10dp"

            android:text="@string/about_app"
            android:singleLine="true"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/robotobolditalic"
            />
        <TextView

            android:id="@+id/aboutTheCreators"

            android:background="@color/lightGray"
            android:layout_width="wrap_content"
            android:layout_height="50sp"

            app:layout_constraintTop_toTopOf="parent"

            android:padding="10dp"

            android:text="@string/about_creators"
            android:singleLine="true"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/robotobolditalic"
            />
        </TableRow>
    </TableLayout>
    <FrameLayout

        android:id="@+id/aboutFragment"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"

        android:layout_width="match_parent"
        android:layout_height="420sp"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout"
        app:layout_constraintBottom_toTopOf="@id/aboutMenuBackButton"
        />

    <ImageView
        android:id="@+id/aboutMenuBackButton"

        android:layout_width="90sp"
        android:layout_height="90sp"
        android:padding="10dp"

        android:src="@raw/back"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>